# DistributedSocialNetwork

./: CMakeLists.txt  README.md  video_script
lib/: Message.h  p2p_layer_utils.h  tsqueue.h  utils.h
lib/App/: App.h  Interface.h  Storage.h  app_serialization.h  application_layer.h
lib/Kademlia/: ConnectionHandler.h  KBucket.h  Peer.h  UDPConnectionHandler.h  kademlia_serialize.h  p2p_layer.h
lib/Network/: Connection.h  IPCConnection.h  TCPConnection.h
src/: main.cpp  p2p_layer_utils.cpp  utils.cpp
src/App/: App.cpp  Interface.cpp  Storage.cpp
src/Kademlia/: ConnectionHandler.cpp  KBucket.cpp  Peer.cpp  UDPConnectionHandler.cpp
src/Network/: Connection.cpp  TCPConnection.cpp
src/interface/: main.py  style.qss
